--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,7 @@
       "@auth/*": ["pages/auth/*"],
       "@dashboard/*": ["pages/dashboard/*"],
       "@master/*": ["pages/master/*"],
-      "@transaction-search/*": ["pages/transaction-search/*"],
-      
+      "@transaction-search/*": ["pages/transaction-search/*"]
     }
   },
   "include": [
