--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
