--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-tabulator": "^0.18.1",
+    "react-toastify": "^9.1.3",
     "vite-tsconfig-paths": "^4.2.0",
     "xlsx": "^0.18.5"
   },
