MCRM-77: Make UI for No. of Enquiries report page.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@dashboard/*": ["pages/dashboard/*"],
       "@master/*": ["pages/master/*"],
       "@transaction-search/*": ["pages/transaction-search/*"],
-      "@profoma/*": ["pages/profoma/*"]
+      "@profoma/*": ["pages/profoma/*"],
+      "@reports/*": ["pages/reports/*"]
     }
   },
   "include": [
