--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
       "@dashboard/*": ["pages/dashboard/*"],
       "@master/*": ["pages/master/*"],
       "@transaction-search/*": ["pages/transaction-search/*"],
-      "@profoma/*": ["pages/profoma/*"]
+      "@proforma/*": ["pages/proforma/*"]
     }
   },
   "include": [
@@ -42,7 +42,8 @@
     "src/**/*.jsx",
     "tests/**/*.ts",
     "tests/**/*.tsx",
-    ".eslintrc.cjs"
+    ".eslintrc.cjs",
+    "src/pages/proforma/useProformaApiCallHook.ts"
   ],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
