--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@transaction-search/*": ["pages/transaction-search/*"],
       "@proforma/*": ["pages/proforma/*"],
       "@reports/*": ["pages/reports/*"],
-      "@invoices/*": ["pages/invoices"]
+      "@invoices/*": ["pages/invoices"],
+      "@receipts/*": ["pages/receipts/*"]
     }
   },
   "include": [
