--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "@tanstack/react-table": "^8.10.7",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "pdfmake": "^0.2.7",
